// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute http forex endpoint should return success 1`] = `
{
  "data": {
    "result": 4494.0249,
  },
  "result": 4494.0249,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute http live endpoint override should return success 1`] = `
{
  "data": {
    "result": 71.281,
  },
  "result": 71.281,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute http live endpoint should return success 1`] = `
{
  "data": {
    "result": 128.785,
  },
  "result": 128.785,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute websocket forex endpoint should return success 1`] = `
{
  "data": {
    "result": 2797.835,
  },
  "result": 2797.835,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1668165071111,
    "providerDataStreamEstablishedUnixMs": 1668165071111,
  },
}
`;
